my fourth commit

--- a/B13-A4-PH-Job-Tracker/index.html
+++ b/B13-A4-PH-Job-Tracker/index.html
@@ -286,7 +286,7 @@
                         <button
                             class="rejectclick py-2 px-3 ring-2 ring-[#EF4444] text-[#EF4444] rounded-sm">Rejected</button>
                     </div>
-                
+                </div>
                 <!-- right -->
                 <div>
                     <div
